2006-03-16  Roman Kennke  <kennke@aicas.com>

	* java/text/DateFormatSymbols.java
	(setAmPmStrings): Added null check and throw NPE.
	(setEras): Likewise.
	(setLocalPatternChars): Likewise.
	(setMonths): Likewise.
	(setShortMonths): Likewise.
	(setShortWeekdays): Likewise.
	(setWeekdays): Likewise.
	(setZoneStrings): Likewise.

2006-03-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/DefaultDesktopManager.java
	(iconifyFrame): Repaint after removing the frame.
	(removeIconFor): Repaint after removing the icon.

2006-03-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JInternalFrame.java
	(remove): Respect the rootPaneCheckingEnabled flag here.

2006-03-16  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/swing/plaf/gnu/GNULookAndFeel.java
	Moved from examples into gnu.javax.swing.. namespace.
	* examples/gnu/classpath/examples/swing/GNULookAndFeel.java
	Moved to gnu.javax.swing.. namespace.
	* examples/gnu/classpath/examples/swing/Demo.java:
	(themesMenu): New field. Used to disable theme switch in
	non-Metal-L&Fs.
	(mkMenuBar): Added L&F menu.
	(ChangeThemeAction.actionPerformed): Only switch theme when
	in Metal L&F.
	(ChangeLAFAction): New class used for changing themes.
	* javax/swing/UIManager.java
	(installed): Added GNU L&F as installed L&F.

2006-03-16  Mark Wielaard  <mark@klomp.org>

	* examples/gnu/classpath/examples/swing/badge.png: Removed.
	* examples/gnu/classpath/examples/icons/badge.png: Added.
	* examples/gnu/classpath/examples/swing/DemoDesktop.java: Use badge
	from icon directory.

2006-03-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* examples/gnu/classpath/examples/awt/AnimationApplet.java: New
	example.
	* examples/gnu/classpath/examples/swing/FillRect.java: Likewise.
	* examples/gnu/classpath/examples/awt/Demo.java: Add
	AnimationApplet demo.
	* examples/gnu/classpath/examples/swing/Demo.java: Add FillRect
	demo.

2006-03-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR classpath/26486